--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -13,16 +13,13 @@ const { title = 'Gayuru G' } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Gayuru G - Product, Design, Engineering" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap"
-      rel="stylesheet"
+    <meta
+      name="description"
+      content="Gayuru G - Product, Design, Engineering"
     />
     <title>{title}</title>
   </head>
-  <body class="px-6 py-16 md:py-24">
+  <body class="px-6 py-24 md:py-50">
     <main class="mx-auto max-w-[640px]">
       <slot />
     </main>
