--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@ import Base from '../layouts/Base.astro';
     <div class="text-muted">-</div>
 
     <div class="space-y-1">
-      <p>Product person with a focus on simplicity.</p>
-      <p>Exploring design, engineering and</p>
-      <p>building things that matter.</p>
+      <p>lead product and eng teams @ Sitemate.</p>
+      <p>still an engineer and designer at heart.</p>
+      <p>i love experimenting with new things.</p>
     </div>
 
     <div class="space-y-1">
