--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Base from '../layouts/Base.astro';
 ---
 
 <Base>
-  <div class="space-y-5 leading-relaxed text-sm">
+  <div class="space-y-4 md:space-y-5 leading-relaxed text-sm">
     <h1 class="font-heading text-base">Gayuru G</h1>
 
     <div class="text-muted">-</div>
