--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -19,9 +19,13 @@ const { title = 'Gayuru G' } = Astro.props;
     />
     <title>{title}</title>
   </head>
-  <body class="px-6 py-12 md:py-50">
+  <body class="px-6 py-24 md:py-50">
     <main class="mx-auto max-w-[640px]">
       <slot />
     </main>
+    <script>
+      import { inject } from '@vercel/analytics';
+      inject();
+    </script>
   </body>
 </html>
